<resources>
    <string name="app_name">My Application</string>

    <string name="photo">Photo</string>
    <string name="select_photo">Select Photo</string>
    <string name="upload_photo">Upload a photo</string>
    <string name="nickname">Nickname</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="photo_description">User Photo</string>

    <string name="notification" />
    <string name="search" />
    <string name="button4">Button4</string>
    <string name="move_to_log_in">Move To Log In</string>
    <string name="youtbe">YouTbe</string>
    <string name="youtube">YouTube</string>
    <string name="addvideopage">AddVideoPage</string>
    <string name="add_button_description">Add</string>
    <string name="delete_button_description">Delete</string>

   <string name="baseServerURL">"http://10.0.2.2:12345/api/"</string>
<!--    <string name="baseServerURL">"http://172.18.40.199:12345/api/"</string>-->
</resources>