<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-14dp">

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:ems="10"
            android:layout_margin="30dp"
            android:padding="20dp"
            android:hint = "@string/nickname"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:ems="10"
            android:layout_margin="30dp"
            android:padding="20dp"
            android:hint="@string/username"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="20dp" />

        <EditText
            android:id="@+id/editTextTextPassword3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:layout_margin="30dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/ToMainPage"
            android:layout_width="137dp"
            android:layout_margin="30dp"
            android:padding="20dp"
            android:layout_height="82dp"
            android:layout_gravity="center"
            android:text="@string/sign_up" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>