<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.422"
        tools:layout_editor_absoluteX="0dp">

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:ems="10"
            android:layout_margin="30dp"
            android:padding="20dp"
            android:hint="@string/username"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:layout_margin="30dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button"
            android:layout_width="137dp"
            android:layout_margin="30dp"
            android:padding="20dp"
            android:layout_height="82dp"
            android:layout_gravity="center"
            android:text="@string/log_in" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>