<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.422"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Space
                android:layout_width="16dp"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="-5dp"
                android:src="@drawable/ic_youtube_logo" />

            <Space
                android:layout_width="8dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/youtubeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="20dp"
                android:text="YouTube"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="16dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:layout_marginBottom="4dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="20dp" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="20dp" />

        <Button
            android:id="@+id/buttonLogIn"
            android:layout_width="137dp"
            android:layout_height="82dp"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:padding="20dp"
            android:text="@string/log_in" />
    </LinearLayout>

    <TextView
        android:id="@+id/ToSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:text="Sign Up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.344" />
</androidx.constraintlayout.widget.ConstraintLayout>
